--- a/nina-carducci.github.io-master/index.html
+++ b/nina-carducci.github.io-master/index.html
@@ -17,7 +17,12 @@
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<!--SEO-->
-	
+	<link rel="canonical" href="https://github.com/RubenKraan/projet-5">
+	<title>Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+		immortaliser vos moments de bonheur</title>
+	<meta name="description"
+		content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
+
 </head>
 <body>
 <!--ajouter header-->
