--- a/nina-carducci.github.io-master/index.html
+++ b/nina-carducci.github.io-master/index.html
@@ -22,7 +22,19 @@
 		immortaliser vos moments de bonheur</title>
 	<meta name="description"
 		content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
+	
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@nina_carducci">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+	immortaliser vos moments de bonheur">
+	<meta name="twitter:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, capture vos plus beaux moments grâce à ses services de shooting photo, de retouche et d'album photo personnalisé. Contactez-la pour des souvenirs immortels !">
+	<meta name="twitter:creator" content="@author_handle">
+	<meta name="twitter:image:src"
+		content="https://github.com/RubenKraan/projet-5/assets/images/nina-small.jpg">
 
+		
 </head>
 <body>
 <!--ajouter header-->
