--- a/nina-carducci.github.io-master/index.html
+++ b/nina-carducci.github.io-master/index.html
@@ -33,8 +33,65 @@
 	<meta name="twitter:creator" content="@author_handle">
 	<meta name="twitter:image:src"
 		content="https://github.com/RubenKraan/projet-5/assets/images/nina-small.jpg">
+	
+		<!-- Open Graph data pour FaceBook - Instagram-->
+	<meta property="og:title" content="Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+	immortaliser vos moments de bonheur">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="fr_FR">
+	<meta property="author" content="OpenClassRooms">
+	<meta property="og:url" content="https://github.com/RubenKraan/projet-5/">
+	<meta property="og:image"
+		content="https://github.com/RubenKraan/projet-5/assets/images/nina-medium.jpg">
+	<meta property="og:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, capture vos plus beaux moments grâce à ses services de shooting photo, de retouche et d'album photo personnalisé. Contactez-la pour des souvenirs immortels !">
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+	immortaliser vos moments de bonheur">
+	<meta name="instagram:title" content="Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+	immortaliser vos moments de bonheur">
+	<meta name="instagram:site" content="@ninacarducci.photo">
+	<meta name="instagram:caption" content="Nina Carducci - Photographe professionnel à Bordeaux : Shooting, retouche et album photo personnalisé pour
+		immortaliser vos moments de bonheur. Visitez mon site : https://github.com/RubenKraan/projet-5 ">
+<!--rich snippets-->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "LocalBusiness",
+				"name": "Nina Carducci Photographe",
+				"image": "https://github.com/RubenKraan/projet-5/assets/images/nina-medium.jpg",
+				"@id": "https://github.com/RubenKraan/projet-5/assets/images/nina-medium.jpg",
+				"url": "lien github a faire",
+				"telephone": "05 56 67 78 89",
+				"priceRange": "50€ 400€",
+				"address": {
+					"@type": "PostalAddress",
+					"streetAddress": "68 avenue Alsace-Lorraine",
+					"addressLocality": "Bordeaux",
+					"postalCode": "33200",
+					"addressCountry": "FR"
+				},
+				"geo": {
+					"@type": "GeoCoordinates",
+					"latitude": 44.8465743,
+					"longitude": -0.6065366999999999
+				},
+				"openingHoursSpecification": {
+					"@type": "OpeningHoursSpecification",
+					"dayOfWeek": [
+						"Monday",
+						"Tuesday",
+						"Wednesday",
+						"Thursday",
+						"Friday"
+					],
+					"opens": "10:00",
+					"closes": "19:00"
+				},
+				"sameAs": "https://www.instagram.com/ninacarducci.photo/"
+			}
+		</script>
 
-		
+
 </head>
 <body>
 <!--ajouter header-->
