update size pictures

--- a/nina-carducci.github.io-master/index.html
+++ b/nina-carducci.github.io-master/index.html
@@ -167,7 +167,7 @@
 	</section>
 <section id="about">
 	<div class="picture left" role="figure">
-		<img src="./assets/images/nina.png" alt="photo de la photographe Nina Carducci" width="375"
+		<img src="./assets/images/nina-medium.jpg" alt="photo de la photographe Nina Carducci" width="375"
 		height="375" style="max-width: 100%; height: auto;" aria-describedby="ariaDescriptionNina">
 	</div>
 	<div id="about-me">
@@ -181,23 +181,23 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="photo d'un public en concert" width="424"
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-464px.jpg" alt="photo d'un public en concert" width="424"
 			height="424"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="photo d'un home en costume"width="424"
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-464px.jpg" alt="photo d'un home en costume"width="424"
 			height="424"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="photo de deux collegue"width="424"
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-464px.jpg" alt="photo de deux collegue"width="424"
 			height="424"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="photo deux marié"width="424"
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-464px.jpg" alt="photo deux marié"width="424"
 			height="424"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="portrait d'un homme avec les yeux fermé" width="424"
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-464px.jpg" alt="portrait d'un homme avec les yeux fermé" width="424"
 			height="424"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="photo d'un couple joyeux" width="424"
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-464px.jpg" alt="photo d'un couple joyeux" width="424"
 			height="424"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="portrait d'une jeune femme avec lunnette de vue" width="424"
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-464px.jpg" alt="portrait d'une jeune femme avec lunnette de vue" width="424"
 			height="424"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="photo d'un chanteut sur scéne" width="424"
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-464px.jpg" alt="photo d'un chanteut sur scéne" width="424"
 			height="424"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="photo d'une collaboratrice souriante derriere un ordinateur" width="424"
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-464px.jpg" alt="photo d'une collaboratrice souriante derriere un ordinateur" width="424"
 			height="424"/>
 		</div>
 	</div>
@@ -270,7 +270,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="image d'un appareil photo vintage" width="417"
+			<img src="./assets/images/camera.jpg" alt="image d'un appareil photo vintage" width="417"
 			height="417" style="max-width: 100%; height: auto;">
 		</div>
 	</div>
